<resources>
    <string name="app_name">Addon</string>
    <string name="join" />
    <string name="join_hint" />
    <string name="hint_wall_pin">Type the wall pin</string>
    <string name="hint_member_name">Name yourself</string>
    <string name="join_welcome">Start your creative adventure!</string>
    <string name="join_wall_name">You are joining %1$s.</string>
    <string name="join_success">Hello %1$s. Welcome to %2$s. Have a nice trip with your friends!</string>
    <string name="hint_wall_name">Name your wall</string>
    <string name="build_wall_name">Building %1$s &#8230;\n</string>
    <string name="post_attr" />
    <string name="select">Select Privacy</string>
    <string name="put_tag">Tag your wall</string>
    <string name="tag1">#product</string>
    <string name="tag2">#issue</string>
    <string name="tag3">#knowledge</string>
    <string name="tag4">#process</string>
    <string name="tag5">#activity</string>
    <string name="tag6">#others</string>
    <string name="build_own">Build your own wall</string>
    <string name="pub">Public</string>
    <string name="mid_bar">\u0020\u0020|\u0020\u0020</string>
    <string name="pri">Private</string>

    <string name="show_wall_pin">The pin for %1$s is %2$s.</string>
    <string name="ok">Share it!</string>

    <string name="wall_URL">https://postwallapp.herokuapp.com/display.php?wallpin=%1$s</string>
</resources>
