<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="330dp"
    android:layout_height="330dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        app:cardElevation="4dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cons_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/post_it"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/post_attr"
                android:scaleType="centerInside"
                android:src="@drawable/post_it"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/post_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="casual"
                android:paddingEnd="24dp"
                android:text="@string/join_hint"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/post_it"
                app:layout_constraintHorizontal_bias="0.15"
                app:layout_constraintStart_toStartOf="@+id/post_it"
                app:layout_constraintTop_toTopOf="@+id/post_it"
                app:layout_constraintVertical_bias="0.1" />

            <EditText
                android:id="@+id/input"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="32dp"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="casual"
                android:hint="@string/join"
                android:maxLength="20"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="@+id/post_it"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/post_content"
                app:layout_constraintTop_toBottomOf="@+id/post_content" />

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="casual"
                android:text=""
                android:textSize="30sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/input"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <LinearLayout
                android:id="@+id/privacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/label"
                app:layout_constraintBottom_toBottomOf="@id/post_it"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" >

                <TextView
                    android:id="@+id/pub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/pub"
                    android:textAllCaps="false"
                    android:textSize="25sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/input" />

                <TextView
                    android:id="@+id/mid_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mid_bar"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/pri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:text="@string/pri"
                    android:textSize="25sp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/pub" />
            </LinearLayout>

            <TableLayout
                android:id="@+id/tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/label"
                app:layout_constraintBottom_toBottomOf="@+id/post_it"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/post_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tag1"
                        android:layout_width="90dp"
                        android:layout_height="45dp"
                        android:background="@android:color/transparent"
                        android:fontFamily="casual"
                        android:text="@string/tag1"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="16sp"
                        tools:layout_editor_absoluteX="54dp"
                        tools:layout_editor_absoluteY="198dp" />

                    <TextView
                        android:id="@+id/tag2"
                        android:layout_width="90dp"
                        android:layout_height="45dp"
                        android:fontFamily="casual"
                        android:text="@string/tag2"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tag3"
                        android:layout_width="100dp"
                        android:layout_height="45dp"
                        android:fontFamily="casual"
                        android:text="@string/tag3"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="16sp" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tag4"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="@string/tag4"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tag5"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="@string/tag5"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tag6"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="casual"
                        android:text="@string/tag6"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:textSize="16sp" />
                </TableRow>

            </TableLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>