<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="330dp"
    android:layout_height="330dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="4dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/post_it"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/post_attr"
                android:scaleType="centerInside"
                android:src="@drawable/post_it"/>

            <EditText
                android:id="@+id/input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="56dp"
                android:backgroundTint="@android:color/transparent"
                android:fontFamily="casual"
                android:hint="@string/join"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="@+id/post_it"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="@+id/post_it"
                app:layout_constraintTop_toBottomOf="@+id/post_content" />

            <TextView
                android:id="@+id/post_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="casual"
                android:text="@string/join_hint"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/post_it"
                app:layout_constraintStart_toStartOf="@+id/post_it"
                app:layout_constraintTop_toTopOf="@+id/post_it"
                app:layout_constraintVertical_bias="0.25" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>